# src/app.ts
@@ -19,10 +19,10 @@ app.use(cookieParser());
 // Setup Swagger documentation
 setupSwagger(app);
 
-app.use("/status", statusRoute);
-app.use("/auth", authenticationRoute);
-app.use("/products", productRoute);
-app.use("/users", userRoute);
+app.use("/api/v1/status", statusRoute);
+app.use("/api/v1/auth", authenticationRoute);
+app.use("/api/v1/products", productRoute);
+app.use("/api/v1/users", userRoute);
 
 app.use(jsonErrorHandler);
 
